--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^17.0.19",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "sass": "^1.39.2"
   }
 }
