--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.8",
     "@types/node": "^16.7.10",
     "@types/react": "^17.0.19",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.41",
     "sass": "^1.39.2",
     "typescript": "^4.4.2"
   }
